# stem-player

./: .gitignore  404.html  AUDIT_AND_STRATEGY.md  AUDIT_FIXES_SUMMARY.md  LOOP_SAMPLING.md  PRODUCT.md  README.md  capacitor.config.json  index.html  package-lock.json  package.json  wrangler.api.toml  wrangler.toml
.claude/: launch.json  ralph-loop.local.md
app/: index.html
appstore-screenshots/: copy.md  export-ipad.js  export.js  landing.html  screenshots-v2.html  screenshots-v3.html  screenshots.html
cloudflare/: stemacle-api-worker.js
docs/: DEVELOPMENT.md  FEATURE_MATRIX.md  NATIVE_WISHLIST.md  NAVIGATION.md  SEPARATION_CONTRACTS.md  STEMACLE_SURFACES.md  STEM_SPLITTING_QUALITY.md  stemacle-user-stories-status.xlsx
ios-coming-soon/: index.html
models/: README.md  convert_demucs.py  requirements.txt  separate.py  stemacle_sep.py
native/: index.html
native/core/: Cargo.toml
native/core/stemacle-dsp/: Cargo.toml
native/core/stemacle-dsp/src/: fft.rs  hpss.rs  lib.rs  loops.rs  stft.rs  tempo.rs  viz.rs
native/core/stemacle-dsp/tests/: golden_parity.rs
native/core/stemacle-ffi/: Cargo.toml
native/core/stemacle-ffi/include/: module.modulemap  stemacle.h
native/core/stemacle-ffi/src/: lib.rs
native/desktop/: Cargo.toml  build.rs
native/desktop/src/: demucs.rs  main.rs  playback.rs  player.rs
native/desktop/ui/: stemacle.slint
node_modules_backup_1781998022/: .package-lock.json
privacy/: index.html
scripts/: build-apple-xcframework.sh  build-ios.sh  check-specs.sh  desktop-dispatch.mjs  fetch-demucs-model.sh  fetch-ios-models.sh  gen-app-icons.sh  ios-release.sh  package-macos.mjs  prepare-native.mjs  prepare-site.mjs  serve-native.mjs
server/: README.md  app.py
specs/: LoopLinking.cfg  LoopLinking.tla  LoopLinking_naive.cfg  LoopTiming.cfg  LoopTiming.tla  Navigation.cfg  Navigation.tla
support/: index.html
terms/: index.html
tests/: benchmark.js  browser-parity.browser.mjs  browser-parity.test.mjs  regressions.js  (+22 more)
(+260 files in other folders)
